--- a/DEPC SUITE/PORTFOLIO/index2.html
+++ b/DEPC SUITE/PORTFOLIO/index2.html
@@ -41,75 +41,26 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#">CONTACTOS <span class="sr-only">(current)</span></a>
                         </li>
-                    </ul>
                 </div>
-            </nav>
-        </header>
-
+                </li>
+                </ul>
     </div>
-
+    </nav>
+    </header>
     <section id="proyectos">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>Mis proyectos!</h1>
+<h2>Estos son algunos trabajos que he realizado:</h2>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <h2>Estos son algunos trabajos que he realizado:</h2>
-                </div>
-            </div>
-
-
-            <div class="row">
-                <div class="col-sm-6 col-12 fotos my-4 pr-5 ">
-
-                    <img src="image/abmventas.png" alt="AMB VENTAS" class="img-fluid">
-                    <div class="col-12">
-                        <h3>AMB Ventas</h3>
-                    </div>
-                    <div class="col-12">
-                        <p>Sistema de gestion de clientes, productos y ventas. Realizado en HTML ,CSS, PHP, BOOTRAP, Js
-                            , Ajax,jquery-3</p>
-                    </div>
-                    <div class="col-4">
-                        <a href="#" class="btn" traget="_blank">Ver online</a>
-                    </div>
-                    <div class="col-4 text-right">
-                        <a href="https://github.com" traget="_blank">Codigo fuente</a>
-                    </div>
-
-
-
-
-
-
-                </div>
-                <div class="col-sm-6 col-12 fotos my-4 pl-5 ">
-
-                    <img src="image/sistema-admin.png" alt="AMB VENTAS" class="img-fluid">
-
-                    <div class="col-12">
-                        <h3>Sistema de gestion</h3>
-                    </div>
-                    <div class="col-12">
-                        <p>Sistema de gestion de clientes, productos y ventas. Realizado en HTML ,CSS, PHP, BOOTRAP, Js
-                            , Ajax,jquery-3</p>
-                    </div>
-                    <div class="col-4">
-                        <a href="#" class="btn" traget="_blank">Ver online</a>
-                    </div>
-                    <div class="col-4 text-right">
-                        <a href="https://github.com" traget="_blank">Codigo fuente</a>
-
+            
+                <div class="row">
+                    <div class="col-sm-6 col-12">
+                        <img src="image/abmventas.png" alt="AMB VENTAS" class="img-fluid">
+                            <h3>AMB VENTAS</h3>
                     </div>
                 </div>
-
-            </div>
-
-
-
 
 
         </div>
