--- a/DEPC SUITE/PORTFOLIO/inicio.html
+++ b/DEPC SUITE/PORTFOLIO/inicio.html
@@ -4,10 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyectos</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Inicio</title>
     <link href="css1/css/all.min.css" rel="stylesheet">
     <link href="css1/css/fontawesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -16,10 +13,11 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-
 </head>
 
-<body>
+<body class="fondo-inicio">
+    <!--Aca comienza el menu de la pagina -->
+
     <div class="Container1">
         <header>
             <nav class="navbar navbar-expand-md navbar-dark  ">
@@ -45,79 +43,23 @@
                 </div>
             </nav>
         </header>
-
     </div>
-
-    <section id="proyectos">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1>Mis proyectos!</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <h2>Estos son algunos trabajos que he realizado:</h2>
-                </div>
-            </div>
-
-
-            <div class="row">
-                <div class="col-sm-6 col-12 fotos my-4 pr-5 ">
-
-                    <img src="image/abmventas.png" alt="AMB VENTAS" class="img-fluid">
-                    <div class="col-12">
-                        <h3>AMB Ventas</h3>
-                    </div>
-                    <div class="col-12">
-                        <p>Sistema de gestion de clientes, productos y ventas. Realizado en HTML ,CSS, PHP, BOOTRAP, Js
-                            , Ajax,jquery-3</p>
-                    </div>
-                    <div class="col-4">
-                        <a href="#" class="btn" traget="_blank">Ver online</a>
-                    </div>
-                    <div class="col-4 text-right">
-                        <a href="https://github.com" traget="_blank">Codigo fuente</a>
-                    </div>
-
-
-
-
-
-
-                </div>
-                <div class="col-sm-6 col-12 fotos my-4 pl-5 ">
-
-                    <img src="image/sistema-admin.png" alt="AMB VENTAS" class="img-fluid">
-
-                    <div class="col-12">
-                        <h3>Sistema de gestion</h3>
-                    </div>
-                    <div class="col-12">
-                        <p>Sistema de gestion de clientes, productos y ventas. Realizado en HTML ,CSS, PHP, BOOTRAP, Js
-                            , Ajax,jquery-3</p>
-                    </div>
-                    <div class="col-4">
-                        <a href="#" class="btn" traget="_blank">Ver online</a>
-                    </div>
-                    <div class="col-4 text-right">
-                        <a href="https://github.com" traget="_blank">Codigo fuente</a>
-
-                    </div>
-                </div>
+    <!--Aca termina el menu de pagina y comienza el contenido principal-->
+    <section class="contenido" id="portfolio">
+        <div class="row">
+            <div class="col-10">
+                <h1>Hola! <br>
+                    Bienvenido a mi Web </h1>
+                <h2>Desarrolladora Full Stack</h2>
+                <a href="files/CV.pdf" class="btn btn-md" target="_blank">Ver mis proyectos</a>
 
             </div>
-
-
-
-
-
         </div>
     </section>
 
 
-
-    <footer>
+    <!--Aca termina el contenido principal y comienza el pie de pagina-->
+    <footer class="pie-inicio">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-12">
@@ -136,6 +78,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
