--- a/DEPC SUITE/PORTFOLIO/sobremi.html
+++ b/DEPC SUITE/PORTFOLIO/sobremi.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Sobre mi</title>
     <link href="css1/css/all.min.css" rel="stylesheet">
     <link href="css1/css/fontawesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -15,10 +12,71 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-
 </head>
 <body>
+    <!--Aca comienza el menu de la pagina -->
+       <div class="Container1">
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark  ">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+                    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">INICIO <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">SOBRE MI <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">PROYECTOS <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">CONTACTOS <span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </div>
+    <!--Aca termina el menu de pagina y comienza el contenido principal-->
+    <section class="contenido" id="portfolio">
+        <div class="row">
+            <div class="col-10">
+                <h1>Sobre mí!</h1>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Vestibulum mollis nisi nec diam tristique maximus. Nam rutrum nec nunc mollis dapibus. Vestibulum sagittis, nisl 
+                    elementum consectetur cursus.</h2>
+                <a href="files/CV.pdf" class="btn btn-md" target="_blank">Descargar CV</a>
+           
+        </div>
+        </div>
+    </section>
  
+
+
+<!--Aca termina el contenido principal y comienza el pie de pagina-->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-12">
+                    <a href="index.php">©Todos los derechos reservados<br>2020</a>
+                </div>
+                <div class="col-sm-4 col-12 text-center">
+                    <a href="https://api.whatsapp.com/send?phone=541150379572&amp;text=Hola" target="_blank"><i
+                            class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.linkedin.com/in/nelson-daniel-tarche/" target="_blank"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/ntarche/fullstack" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
+                <div class="col-sm-4 col-12 text-sm-right text-center">
+                    Patrocinado por<br><a href="https://depcsuite.com" target="_blank">DePC Suite</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
